# src/server/docs/swagger.yaml
@@ -1393,6 +1393,184 @@ paths:
                             schema:
                                 type: string
                                 example: "Internal server error"
+    /api/metrics/{goodsId}:
+        get:
+            tags:
+                - Metrics
+            summary: Получение метрик товара по идентификатору товара
+            description: Возвращает метрики для указанного товара.
+            parameters:
+                - name: goodsId
+                  in: path
+                  required: true
+                  description: Уникальный идентификатор товара, для которого нужно получить метрики
+                  schema:
+                      type: integer
+            responses:
+                "200":
+                    description: Метрики товара
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    goods_id:
+                                        type: integer
+                                        description: Уникальный идентификатор товара
+                                    views:
+                                        type: integer
+                                        description: Количество просмотров товара
+                                    add_to_cart_count:
+                                        type: integer
+                                        description: Количество добавлений товара в корзину
+                                    order_count:
+                                        type: integer
+                                        description: Количество заказов товара
+                "404":
+                    description: Метрики не найдены
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Metrics not found"
+                "500":
+                    description: Внутренняя ошибка сервера
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Internal server error"
+        post:
+            tags:
+                - Metrics
+            summary: Создание метрик для товара
+            description: Создает новые метрики для указанного товара с идентификатором goodsId.
+            parameters:
+                - name: goodsId
+                  in: path
+                  required: true
+                  description: Уникальный идентификатор товара, для которого нужно получить метрики
+                  schema:
+                      type: integer
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                goodsId:
+                                    type: integer
+                                    description: Уникальный идентификатор товара, для которого создаются метрики
+                            required:
+                                - goodsId
+            responses:
+                "201":
+                    description: Метрики успешно созданы
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    goods_id:
+                                        type: integer
+                                        description: Уникальный идентификатор товара
+                                    views:
+                                        type: integer
+                                        description: Количество просмотров товара
+                                    add_to_cart_count:
+                                        type: integer
+                                        description: Количество добавлений товара в корзину
+                                    order_count:
+                                        type: integer
+                                        description: Количество заказов товара
+                "400":
+                    description: Ошибка при создании метрик
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Invalid input"
+                "500":
+                    description: Внутренняя ошибка сервера
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Internal server error"
+        patch:
+            tags:
+                - Metrics
+            summary: Обновление метрик товара
+            description: Обновляет метрики для указанного товара с идентификатором goodsId.
+            parameters:
+                - name: goodsId
+                  in: path
+                  required: true
+                  description: Уникальный идентификатор товара, для которого нужно обновить метрики
+                  schema:
+                      type: integer
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                views:
+                                    type: integer
+                                    description: Новое количество просмотров товара
+                                addToCartCount:
+                                    type: integer
+                                    description: Новое количество добавлений товара в корзину
+                                orderCount:
+                                    type: integer
+                                    description: Новое количество заказов товара
+                            required:
+                                - views
+                                - addToCartCount
+                                - orderCount
+            responses:
+                "200":
+                    description: Метрики успешно обновлены
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    goods_id:
+                                        type: integer
+                                        description: Уникальный идентификатор товара
+                                    views:
+                                        type: integer
+                                        description: Количество просмотров товара
+                                    add_to_cart_count:
+                                        type: integer
+                                        description: Количество добавлений товара в корзину
+                                    order_count:
+                                        type: integer
+                                        description: Количество заказов товара
+                "404":
+                    description: Метрики не найдены
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Metrics not found"
+                "400":
+                    description: Ошибка при обновлении метрик
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Invalid input"
+                "500":
+                    description: Внутренняя ошибка сервера
+                    content:
+                        application/json:
+                            schema:
+                                type: string
+                                example: "Internal server error"
 
 tags:
     - name: Auth
@@ -1407,3 +1585,5 @@ tags:
       description: Методы для работы с корзиной.
     - name: File
       description: Методы для работы с файлами.
+    - name: Metrics
+      description: Методы для работы с метрикой.
